--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -362,7 +362,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- checkout view -->
       <shop-checkout name="checkout" cart="[[cart]]" total="[[total]]" route="{{subroute}}"></shop-checkout>
       <!-- account view -->
-      <shop-account name="account" profile="[[profile]]" route="[[subroute]]" prefilled-email="[[userEmail]]"></shop-account>
+      <shop-account name="account" profile="[[profile]]" route="[[subroute]]" prefilled-email="[[userEmail]]" selected="[[_pageSelected(page, 'account')]]"></shop-account>
 
       <shop-404-warning name="404"></shop-404-warning>
     </iron-pages>
@@ -480,6 +480,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               cb, cb, true);
           }
         }
+      }
+
+      _pageSelected(page, target) {
+        return page === target;
       }
 
       _pageLoaded(shouldResetLayout) {
@@ -713,10 +717,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               }
             }));
           } else {
-            console.log('No credentials found');
+            console.info('No credentials found');
           }
         }, err => {
-          console.log('auto sign-in did not happen');
+          console.info(err.message);
         });
       }
 
