--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -21,6 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="shop-category-data.html">
 <link rel="import" href="shop-payment-request.html">
+<link rel="import" href="shop-payment-method.html">
 <!-- Since 'home' is the default route, eagerly load it. -->
 <link rel="import" href="shop-home.html">
 
@@ -274,13 +275,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         cart="[[cart]]"
         total="[[total]]"
         currency="USD"
-        basic-card='["visa", "mastercard", "amex", "discover", "diners", "jcb", "unionpay"]'
-        supported-methods='["https://emerald-eon.appspot.com/alicepay","https://emerald-eon.appspot.com/bobpay"]'
-        pay-with-google='{"merchantId":"02510116604241796260","environment":"TEST","apiVersion":1,"allowedPaymentMethods":["CARD","TOKENIZED_CARD"],"paymentMethodTokenizationParameters": { "tokenizationType":"PAYMENT_GATEWAY", "parameters": {"gateway":"stripe","stripe:publishableKey":"pk_test_fkdoiK6FR5BLZMFNbSGoDjpn","stripe:version":"5.1.0"}},"cardRequirements":{ "allowedCardNetworks":["AMEX","DISCOVER","MASTERCARD","VISA"], "billingAddressRequired":true,"billingAddressFormat":"FULL"}, "phoneNumberRequired":false,"emailRequired":false, "shippingAddressRequired":false}'
         request-payer-email
         request-payer-phone
         request-payer-name
         shipping-type="delivery">
+      <shop-payment-method
+        supported-methods="basic-card"
+        data='{"supportedNetworks":["visa", "mastercard", "amex", "discover", "diners", "jcb", "unionpay"],"supportedTypes":["credit","debit","prepaid"]}'
+        ></shop-payment-method>
+      <shop-payment-method
+        supported-methods="https://payment-handler-example.firebaseapp.com/pay"
+        ></shop-payment-method>
+      <shop-payment-method
+        supported-methods="https://emerald-eon.appspot.com/alicepay"
+        ></shop-payment-method>
+      <shop-payment-method
+        supported-methods="https://emerald-eon.appspot.com/bobpay"
+        ></shop-payment-method>
+      <shop-payment-method
+        supported-methods="https://google.com/pay"
+        data='{"merchantId":"02510116604241796260","environment":"TEST","apiVersion":1,"allowedPaymentMethods":["CARD","TOKENIZED_CARD"],"paymentMethodTokenizationParameters": { "tokenizationType":"PAYMENT_GATEWAY", "parameters": {"gateway":"stripe","stripe:publishableKey":"pk_test_fkdoiK6FR5BLZMFNbSGoDjpn","stripe:version":"5.1.0"}},"cardRequirements":{ "allowedCardNetworks":["AMEX","DISCOVER","MASTERCARD","VISA"], "billingAddressRequired":true,"billingAddressFormat":"FULL"}, "phoneNumberRequired":false,"emailRequired":false, "shippingAddressRequired":false}'
+        ></shop-payment-method>
     </shop-payment-request>
 
     <app-header role="navigation" id="header" effects="waterfall" condenses reveals>
